change: componetized simple messages

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,8 @@
 @import 'site';
 @import 'navbar';
 @import 'dropdownMenu';
+@import 'messages';
+@import 'chatContainer';
+@import 'questionsCarousel';
+@import 'input';
 @import 'mixins';
