--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,21 +1,24 @@
-nav {
+.nav-bar {
   display: flex;
   align-items: center;
+  gap: 12px;
   padding: 10px;
   background-color: #f5f5f5;
   border-bottom: 1px solid #ccc;
   position: relative;
+
+  .chatbot {
+    &-profile {
+      display: flex;
+      align-items: center;
+    }
+    &-img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      margin: 0 10px;
+    }
+  }
 }
 
-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
 
-img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin: 0 10px;
-}
