--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,12 +1,20 @@
 .app-chatbot {
+    height: fit-content;
     display: flex;
     flex-direction: column;
     position: fixed;
-    inset: auto 0 0 0;
+    margin: 1.6rem;
+    right: 0;
+    bottom: 0;
+    left: 0;
 
+    .main {
+        overflow: hidden;
+    }
+   
     &:has(.nav-bar[class*="closed"]) {
-        main {
-            display: none;
+        .main {
+            max-height: 0;
         }
     }
 }
