--- a/src/scss/_chatContainer.scss
+++ b/src/scss/_chatContainer.scss
@@ -1,4 +1,7 @@
 .chat-container {
     display: flex;
     flex-direction: column;
+    gap: 1.6rem;
+    padding: $p--l;
+    background-color: $gray;
 }
