--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   gap: 12px;
-  padding: 10px;
-  background-color: #f5f5f5;
+  padding: $p--m;
+  background-color: $main;
   border-bottom: 1px solid #ccc;
   position: relative;
 
@@ -19,6 +19,19 @@
       margin: 0 10px;
     }
   }
+  .btn--toggle-chat-window {
+    width: 2.4rem;
+    height: 2.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    .btn-bar {
+      width: 100%;
+      height: .4rem;
+      background-color: $white;
+      position: absolute;
+    }
+  }
 }
-
-
