--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -10,6 +10,14 @@
     font-family: "source sans 3", Arial, Helvetica, sans-serif;
 }
 
-h2, p {
+h2, p,a {
+    font-size: $font--m;
+}
+ 
+.question,
+.input,
+.list-item,
+.btn--send-message,
+.btn--dropdown-menu {
     font-size: $font--m;
 }
