--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,9 +3,11 @@
 @import 'site';
 @import 'navbar';
 @import 'dropdownMenu';
-@import 'messages';
 @import 'chatContainer';
+@import 'messageInput';
+@import 'messages';
 @import 'questionsCarousel';
 @import 'input';
+@import 'footer';
 @import 'swiper';
 @import 'mixins';
