--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -1,9 +1,8 @@
 .app-chatbot {
-    height: fit-content;
+    height: 100%;
     display: flex;
     flex-direction: column;
     position: fixed;
-    margin: 1.6rem;
     right: 0;
     bottom: 0;
     left: 0;
@@ -13,8 +12,6 @@
     }
    
     &:has(.nav-bar[class*="closed"]) {
-        .main {
-            max-height: 0;
-        }
+        display: none;
     }
 }
