--- a/src/scss/_chatContainer.scss
+++ b/src/scss/_chatContainer.scss
@@ -1,7 +1,9 @@
 .chat-container {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    // height: 60%;
     gap: 1.6rem;
-    padding: $p--l;
     background-color: $gray;
+    overflow-y: scroll;
 }
