--- a/src/scss/_chatContainer.scss
+++ b/src/scss/_chatContainer.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    // height: 60%;
+    padding: $p--l;
     gap: 1.6rem;
     background-color: $gray;
     overflow-y: scroll;
