--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -18,6 +18,9 @@
       border-radius: 50%;
       margin: 0 10px;
     }
+    &-name {
+      color: $white;
+    }
   }
   .btn--toggle-chat-window {
     width: 2.4rem;
