--- a/src/scss/_swiper.scss
+++ b/src/scss/_swiper.scss
@@ -36,9 +36,9 @@
   // margin-left: auto;
   // margin-right: auto;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
   list-style: none;
-  padding: 0;
+  // padding: 0;
   /* Fix of Webkit flickering */
   height: fit-content;
   z-index: 1;
