change: name chatContainer to messagesContainer

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'site';
 @import 'navbar';
 @import 'dropdownMenu';
-@import 'chatContainer';
+@import 'messagesContainer';
 @import 'messageInput';
 @import 'messages';
 @import 'questionsCarousel';
