fixed: toggle dropdown menu button size

--- a/src/scss/_dropdownMenu.scss
+++ b/src/scss/_dropdownMenu.scss
@@ -19,5 +19,9 @@
     
     .btn--dropdown-menu {
         color: $white;
+        width: 2.4rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
