change: more separated components and some rename

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,12 +2,12 @@
 @import 'icons';
 @import 'app';
 @import 'site';
-@import 'navbar';
+@import 'topBar';
 @import 'dropdownMenu';
-@import 'messagesContainer';
-@import 'messageInput';
 @import 'messages';
-@import 'questionsCarousel';
+@import 'chat';
+@import 'chatInput';
+@import 'chatOptionsCarousel';
 @import 'input';
 @import 'footer';
 @import 'swiper';
