add: enabling and disabling send message button

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'icons';
 @import 'app';
 @import 'site';
+@import 'buttons';
 @import 'topBar';
 @import 'dropdownMenu';
 @import 'messages';
