change: exporting components from index.js

--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -30,7 +30,7 @@
     bottom: $margin--m;
     right: $margin--m;
 }
-.chatbot--default {
+.chatbot-container--default {
     height: 100%;
     display: flex;
     flex-direction: column;
