--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import 'app';
 @import 'site';
 @import 'buttons';
+@import 'cto';
 @import 'topBar';
 @import 'dropdownMenu';
 @import 'messages';
