add: gray--100 color variable

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,6 +2,7 @@
 $main: oklch(69.71% 0.227 28.59);
 $white: oklch(100% 0 0);
 $gray: oklch(95% 0 0);
+$gray--100: oklch(77.89% 0 0);
 $black: oklch(0% 0 0);
 
 // Unit
