--- a/src/scss/_messages.scss
+++ b/src/scss/_messages.scss
@@ -1,6 +1,6 @@
 [class*="message--"] {
   border-radius: $rounded--m;
-  max-width: 75%;
+  max-width: 66%;
   background-color: $white;
   padding: $p--m;
 }
@@ -10,8 +10,8 @@
     text-align: right;
     background-color: $main;
     color: $white;
-    margin-left: auto;
     border-top-right-radius: 0;
+    margin: $margin--m 0 $margin--m auto;
   }
   
   &--chatbot {
