--- a/src/scss/_topBar.scss
+++ b/src/scss/_topBar.scss
@@ -2,10 +2,10 @@
   display: flex;
   align-items: center;
   gap: 12px;
-  padding: $p--m;
   background-color: $main;
   border-bottom: 1px solid #ccc;
   position: relative;
+  padding: $p--s*.5;
 
   .chatbot {
     &-profile {
