--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -13,6 +13,9 @@
     left: 0;
     overflow: hidden;
     border-radius: $rounded--s;
+    -webkit-box-shadow: 0px 4px 18px -2px $gray--200;
+    -moz-box-shadow: 0px 4px 18px -2px $gray--200;
+    box-shadow: 0px 4px 18px -2px $gray--200;
 
     &.closed {
         display: none;
@@ -30,6 +33,18 @@
         &:has(input[class='maximize-toggler']:checked) {
             height: 100%;
             width: 100%;
+
+            [class*="message--"] {
+                @include mq-720 {
+                  max-width: 50%;
+                }
+                @include mq-1024 {
+                  max-width: 40%;
+                }
+                @include mq-1920 {
+                  max-width: 33%;
+                }
+              }
         }
     }
 }
