--- a/src/scss/_chatInput.scss
+++ b/src/scss/_chatInput.scss
@@ -3,11 +3,12 @@
     width: 100%;
     position: relative;
     min-height: 5rem;
-    border-top: 1px solid $gray;
-    border-bottom: 1px solid $gray;
+    border-top: 1px solid $gray--200;
+    border-bottom: 1px solid $gray--200;
     .input {
         flex: 1;
         border: none;
+        padding: $p--s;
         &:focus {
             outline: none;
         }
