--- a/src/scss/_chatOptionsCarousel.scss
+++ b/src/scss/_chatOptionsCarousel.scss
@@ -4,6 +4,12 @@
     .option {
         width: fit-content;
         height: fit-content;
+        &:nth-child(1) {
+            margin-left: $margin--s;
+        }
+        &:nth-last-child(1) {
+            margin-right: $margin--s;
+        }
     }
 }
 
