fix: sending messages process and asyncronous response process

--- a/src/scss/_messages.scss
+++ b/src/scss/_messages.scss
@@ -1,5 +1,6 @@
 [class*="message--"] {
   border-radius: $rounded--m;
+  width: fit-content;
   max-width: 66%;
   background-color: $white;
   padding: $p--m;
