--- a/src/scss/_messages.scss
+++ b/src/scss/_messages.scss
@@ -3,8 +3,22 @@
   width: fit-content;
   max-width: 66%;
   background-color: $white;
-  padding: $p--m;
+  padding: $p--s $p--m;
   transition: max-width .4s ease-in-out;
+}
+
+.app-chatbot.fullscreen {
+  [class*="message--"] {
+    @include mq-720 {
+        max-width: 50%;
+    }
+    @include mq-1024 {
+        max-width: 40%;
+    }
+    @include mq-1920 {
+        max-width: 33%;
+    }
+  }
 }
 
 .message {
