--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -21,25 +21,12 @@
         width: 48rem;
         left: auto;
         transition: 
-            width .4s ease-in-out,
-            height .4s ease-in-out;
-        
-        // Maximizing window
-        &:has(input[class='maximize-toggler']:checked) {
+        width .4s ease-in-out,
+        height .4s ease-in-out;
+
+        &.fullscreen {
             height: 100%;
             width: 100%;
-
-            [class*="message--"] {
-                @include mq-720 {
-                  max-width: 50%;
-                }
-                @include mq-1024 {
-                  max-width: 40%;
-                }
-                @include mq-1920 {
-                  max-width: 33%;
-                }
-              }
         }
     }
 }
