add: writing message fading animation

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,5 +12,7 @@
 @import 'chatOptionsCarousel';
 @import 'input';
 @import 'footer';
+@import 'keyframes';
+@import 'utilities';
 @import 'swiper';
 @import 'mixins';
