--- a/src/scss/_keyframes.scss
+++ b/src/scss/_keyframes.scss
@@ -6,3 +6,13 @@
         opacity: .8;
     }
 }
+@keyframes showingMessage {
+    from {
+        opacity: 0;
+        transform: translateY(100%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
