--- a/src/scss/_dropdownMenu.scss
+++ b/src/scss/_dropdownMenu.scss
@@ -13,7 +13,8 @@
         border-bottom-left-radius: $rounded--m;
         overflow: hidden;
         max-height: 0;
-        transition: max-height .6s ease-in-out;
+        opacity: 0;
+        transition: max-height .1s ease-in-out .2s, opacity .2s ease-in-out;
 
         &-item {
             border-bottom: 1px solid $gray--200;
@@ -25,6 +26,8 @@
     &:has(input[class='dropdown-toggler']:checked) {
         .dropdown-menu {
             max-height: 99rem;
+            opacity: 1;
+            transition: max-height .4s ease-in-out, opacity .4s ease-in-out;
         }
     }
 }
