--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,13 +1,7 @@
 @import './variables';
-@font-face {
-    font-family: "source sans 3";
-    src: url("../public/fonts/SourceSans3-VariableFont_wght.ttf") format('truetype');
-    font-style: normal;
-    font-weight: light;
-}
 
 * {
-    font-family: "source sans 3", Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h2, p, a {
