--- a/src/scss/_keyframes.scss
+++ b/src/scss/_keyframes.scss
@@ -16,3 +16,11 @@
         transform: translateY(0);
     }
 }
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
