--- a/src/scss/_keyframes.scss
+++ b/src/scss/_keyframes.scss
@@ -24,3 +24,11 @@
         opacity: 1;
     }
 }
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
